--- a/index.html
+++ b/index.html
@@ -1436,7 +1436,7 @@
                     <div class="footer-logo">Zeinab<span>Salah</span></div>
                     <p>Full Stack PHP Developer creating beautiful and functional digital experiences.</p>
                     <div class="social-links">
-                        <a href="https://www.linkedin.com/in/zeinabsalah" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://www.linkedin.com/in/zeinab-salah-b43991265?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
                         <a href="https://github.com/FuturePoet" class="social-icon"><i class="fab fa-github"></i></a>
                         <a href="https://m.me/zeinab.salah.3910829" class="social-icon"><i class="fab fa-facebook-messenger"></i></a>
                         <a href="https://wa.me/+201092049161" class="social-icon"><i class="fab fa-whatsapp"></i></a>
